z-index fixed for navbar, empty container at bottom now doesn't allow for content to be cut off

--- a/src/layout/Sidebar/Sidebar.scss
+++ b/src/layout/Sidebar/Sidebar.scss
@@ -1,5 +1,5 @@
 .navbar {
-	z-index: 10;
+	z-index: 1000;
 
 	$navbar-text-primary: #b6b6b6;
 	$navbar-text-secondary: #ececec;
