--- a/src/pages/User/JoinInfo/JoinInfoPage/JoinInfoPage.scss
+++ b/src/pages/User/JoinInfo/JoinInfoPage/JoinInfoPage.scss
@@ -1,8 +1,15 @@
 .join-info-main {
 	margin-left: 5rem;
+}
 
-	@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 600px) {
+	.join-info-main {
 		margin-left: 0;
+	}
+
+	.container-to-fill-navbar-space {
+		width: 100%;
+		height: 5rem;
 	}
 }
 
